Fix github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build all
+name: Build
 on: [push, pull_request]
 
 jobs:
@@ -11,8 +11,10 @@ jobs:
       run: sudo apt-get update # && sudo apt-get install -yq something
     # build project
     - name: mkir build
-      run: mkdir build && cd build
+      run: mkdir build
     - name: cmake
+      working-directory: ./build
       run: cmake ..
     - name: make
+      working-directory: ./build
       run: make
