Add Platform Control directory
Platform Control is the component in charge of limiting processes'
resources
Add an interface to interact with the module
Add an implementation of the interface to deal with processes
Add a utility class to manipulate cgroups
Add some unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory (applib)
 add_subdirectory (common)
 add_subdirectory (lib)
 add_subdirectory (rm)
-
+add_subdirectory (platformcontrol)
+add_subdirectory (testplatformcontrol)
