KeyValueParser is now a class instead of a set of functions
- Rename test files
- Fix KeyValueParser test program

--- a/testplatformcontrol/CMakeLists.txt
+++ b/testplatformcontrol/CMakeLists.txt
@@ -18,7 +18,7 @@ endmacro(add_unit_test)
 add_unit_test(test_split)
 add_unit_test(test_findcgrouppath)
 add_unit_test(test_createcgroup)
-add_unit_test(test_numericutil)
+add_unit_test(test_keyvalueparser)
 
 
 
