--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory (lib)
 add_subdirectory (rm)
 add_subdirectory (platformcontrol)
 add_subdirectory (testplatformcontrol)
+add_subdirectory (workloadmanager)
