Move platformcontrol and workloadmanager in "rm" folder

--- a/testplatformcontrol/CMakeLists.txt
+++ b/testplatformcontrol/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(CMAKE_CXX_STANDARD 14)
-include_directories("../platformcontrol")
+include_directories("../rm/platformcontrol")
 
 # Test init
 include(CTest)
