Move utility classes in a dedicated folder

--- a/rm/platformcontrol/CMakeLists.txt
+++ b/rm/platformcontrol/CMakeLists.txt
@@ -3,13 +3,18 @@ file(GLOB platformcontrol_SOURCES "*.cpp")
 file(GLOB platformcontrol_HEADERS "*.h")
 file(GLOB platformcontrol_controllers_SOURCES "controllers/*.cpp")
 file(GLOB platformcontrol_controllers_HEADERS "controllers/*.h")
+file(GLOB utilities_SOURCES "utilities/*.cpp")
+file(GLOB utilities_HEADERS "utilities/*.h")
 
 add_library(platformcontrol
     ${platformcontrol_SOURCES} ${platformcontrol_HEADERS}
     ${platformcontrol_controllers_SOURCES} ${platformcontrol_controllers_HEADERS}
+    ${utilities_SOURCES} ${utilities_HEADERS}
 )
+
 target_include_directories(platformcontrol INTERFACE .)
 target_include_directories(platformcontrol INTERFACE controllers)
+target_include_directories(platformcontrol INTERFACE utilities)
 
 file(GLOB tpc_SOURCES "tpc/*.cpp")
 file(GLOB tpc_HEADERS "tpc/*.h")
