Add WorkloadManager class
Implement Observer pattern in WorkloadManager

--- a/rm/workloadmanager/CMakeLists.txt
+++ b/rm/workloadmanager/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB workloadmanager_HEADERS "*.h")
 
 add_library(workloadmanager
     ${workloadmanager_SOURCES} ${workloadmanager_HEADERS}
-    ${workloadmanager_controllers_SOURCES} ${workloadmanager_controllers_HEADERS}
 )
+
+target_link_libraries(workloadmanager platformcontrol)
 target_include_directories(workloadmanager INTERFACE .)
