Add queue and messages for thread communication
Move app.h to main include directory
Remove unused events from workloadmanager and proclistener

--- a/rm/CMakeLists.txt
+++ b/rm/CMakeLists.txt
@@ -3,11 +3,15 @@ set (CMAKE_CXX_STANDARD 14)
 add_subdirectory (platformcontrol)
 add_subdirectory (workloadmanager)
 add_subdirectory (resourcepolicies)
+add_subdirectory (platformmonitor)
 
-set(KONRO_SOURCES "src/main.cpp")
+file(GLOB konro_SOURCES "src/*.cpp")
+file(GLOB konro_HEADERS "include/*.h")
 
-add_executable (konro ${KONRO_SOURCES})
+include_directories(${PROJECT_SOURCE_DIR}/rm/include)
+
+add_executable (konro ${konro_SOURCES} ${konro_HEADERS})
 target_compile_definitions(konro PUBLIC KONRO_RM)
-target_link_libraries(konro PUBLIC konro-common platformcontrol workloadmanager)
+target_link_libraries(konro PUBLIC konro-common platformcontrol workloadmanager resourcepolicies)
 
 configure_file(konro.ini.in konro.ini)
