--- a/rm/resourcepolicies/CMakeLists.txt
+++ b/rm/resourcepolicies/CMakeLists.txt
@@ -1,9 +1,12 @@
 set(CMAKE_CXX_STANDARD 14)
-file(GLOB resourcemanagement_SOURCES "*.cpp")
-file(GLOB resourcemanagement_HEADERS "*.h")
-add_library(resourcemanagement
-            ${resourcemanagement_HEADERS}
-            ${resourcemanagement_SOURCES}
+file(GLOB resourcepolicies_SOURCES "*.cpp")
+file(GLOB resourcepolicies_HEADERS "*.h")
+add_library(resourcepolicies
+            ${resourcepolicies_HEADERS}
+            ${resourcepolicies_SOURCES}
 )
 
-target_include_directories(resourcemanagement INTERFACE .)
+include_directories("../include")
+#include_directories("../platformcontrol")
+target_include_directories(resourcepolicies INTERFACE .)
+
