--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory (common)
 add_subdirectory (lib)
 add_subdirectory (rm)
 add_subdirectory (testplatformcontrol)
+add_subdirectory (testresourcepolicies)
