--- a/rm/CMakeLists.txt
+++ b/rm/CMakeLists.txt
@@ -14,6 +14,12 @@ include_directories(${PROJECT_SOURCE_DIR}/rm/include)
 
 add_executable (konro ${konro_SOURCES} ${konro_HEADERS})
 target_compile_definitions(konro PUBLIC KONRO_RM)
-target_link_libraries(konro PUBLIC konro-common rmcommon platformcontrol workloadmanager resourcepolicies)
+target_link_libraries(konro PUBLIC
+    konro-common
+    rmcommon
+    platformcontrol
+    workloadmanager
+    resourcepolicies
+    platformmonitor)
 
 configure_file(konro.ini.in konro.ini)
