--- a/testsensors/CMakeLists.txt
+++ b/testsensors/CMakeLists.txt
@@ -2,9 +2,8 @@ set(CMAKE_CXX_STANDARD 14)
 file(GLOB testsensors_SOURCES "*.cpp")
 file(GLOB testsensors_HEADERS "*.h")
 
-set(LMSENSORS_INCLUDE_DIRS "/usr/include/sensors")
-set(LMSENSORS_LIBRARIES libsensors.so)
+find_package(Sensors REQUIRED)
 
 add_executable(testsensors ${testsensors_HEADERS} ${testsensors_SOURCES})
-target_include_directories(testsensors PRIVATE ${LMSENSORS_INCLUDE_DIRS})
-target_link_libraries(testsensors ${LMSENSORS_LIBRARIES})
+target_include_directories(testsensors PRIVATE ${SENSORS_INCLUDE_DIR})
+target_link_libraries(testsensors ${SENSORS_LIBRARY})
