Move all Events to dedicated folder

--- a/rm/librmcommon/CMakeLists.txt
+++ b/rm/librmcommon/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(CMAKE_CXX_STANDARD 14)
 file(GLOB librmcommon_SOURCES "*.cpp")
-file(GLOB librmcommon_HEADERS "*.h")
+file(GLOB librmcommon_HEADERS "*.h"  "events/*.h")
 
 add_library(rmcommon ${librmcommon_SOURCES} ${librmcommon_HEADERS})
 
 target_include_directories(rmcommon INTERFACE .)
+target_include_directories(rmcommon INTERFACE events)
