--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,10 @@ add_subdirectory (applib)
 add_subdirectory (common)
 add_subdirectory (lib)
 add_subdirectory (rm)
+add_subdirectory (konrofeedback)
+
 add_subdirectory (testplatformcontrol)
 add_subdirectory (testresourcepolicies)
 add_subdirectory (testsensors)
 add_subdirectory (testhwloc)
+add_subdirectory (testfeedback)
