--- a/rm/workloadmanager/CMakeLists.txt
+++ b/rm/workloadmanager/CMakeLists.txt
@@ -6,5 +6,5 @@ add_library(workloadmanager
     ${workloadmanager_SOURCES} ${workloadmanager_HEADERS}
 )
 
-target_link_libraries(workloadmanager rmcommon platformcontrol resourcepolicies)
+target_link_libraries(workloadmanager rmcommon platformcontrol policymanager)
 target_include_directories(workloadmanager INTERFACE .)
