Add command line parameter for config file
It is now possible to specify the path of the Konro configuration file on
the command line
Add low level timing of some operations
Code reafactoring
Improve exception handling
Better error checking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project (konro)
 
 list (APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/")
 
+# enable low level timing of (some parts of the) code
+add_definitions(-DTIMING)
+
 add_subdirectory (common)
 add_subdirectory (lib)
 add_subdirectory (rm)
