Code refactoring (KonroTimer)
Add timer test program

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,4 +32,5 @@ add_subdirectory (testthreadsafequeue)
 add_subdirectory (testsensors)
 add_subdirectory (testhwloc)
 add_subdirectory (testkonrolib)
+add_subdirectory (testtimer)
 add_subdirectory (peopledetect)
