Add new policy (MinCoresPolicy)
Add functions for CpusetVector
Code refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory (testkonrolib)
 add_subdirectory (testtimer)
 add_subdirectory (peopledetect)
 add_subdirectory (testnamespaces)
+add_subdirectory (testrmcommon)
