drom initial version

--- a/rm/platformcontrol/CMakeLists.txt
+++ b/rm/platformcontrol/CMakeLists.txt
@@ -7,12 +7,14 @@ file(GLOB utilities_SOURCES "utilities/*.cpp")
 file(GLOB utilities_HEADERS "utilities/*.h")
 file(GLOB cgroup_SOURCES "cgroup/*.cpp" "cgroup/controllers/*.cpp")
 file(GLOB cgroup_HEADERS "cgroup/*.h" "cgroup/controllers/*.h")
+file(GLOB drom_SOURCES "drom/*.cpp" "drom/controllers/*.cpp")
+file(GLOB drom_HEADERS "drom/*.h" "drom/controllers/*.h")
 
 
 add_library(platformcontrol
     ${platformcontrol_SOURCES} ${platformcontrol_HEADERS}
     ${platformcontrol_controllers_SOURCES} ${platformcontrol_controllers_HEADERS}
-    ${cgroup_SOURCES} ${cgroup_HEADERS}
+    ${cgroup_SOURCES} ${cgroup_HEADERS} ${drom_SOURCES} ${drom_HEADERS}
     ${utilities_SOURCES} ${utilities_HEADERS}
 )
 
@@ -20,9 +22,13 @@ include_directories(${PROJECT_SOURCE_DIR}/rm/platformcontrol)
 include_directories(${PROJECT_SOURCE_DIR}/rm/platformcontrol/utilities)
 include_directories(${PROJECT_SOURCE_DIR}/rm/platformcontrol/cgroup)
 include_directories(${PROJECT_SOURCE_DIR}/rm/platformcontrol/cgroup/controllers)
+include_directories(${PROJECT_SOURCE_DIR}/rm/platformcontrol/drom)
+include_directories(${PROJECT_SOURCE_DIR}/rm/platformcontrol/drom/controllers)
+
 
 target_include_directories(platformcontrol INTERFACE .)
 target_include_directories(platformcontrol INTERFACE cgroup/controllers)
+target_include_directories(platformcontrol INTERFACE drom/controllers)
 target_include_directories(platformcontrol INTERFACE utilities)
 
 target_link_libraries(platformcontrol PRIVATE rmcommon ${LOG4CPP_LIBRARIES})
