--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ if (TIMING)
     add_definitions(-DTIMING)
 endif()
 
+add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+
 add_subdirectory (common)
 add_subdirectory (lib)
 add_subdirectory (rm)
